--- a/Rough.ipynb
+++ b/Rough.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "223a8ea4",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,219 @@
     "import glob\n",
     "import random"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dc787b8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def interactionsList(interactionFile):\n",
+    "    '''\n",
+    "    This function reads the interaction file and creates a nested-list,\n",
+    "    each list inside contains the array of all interaction parameters for\n",
+    "    that timestep.\n",
+    "\n",
+    "    Input: interactionFile - the location of the interaction data file\n",
+    "    '''\n",
+    "\n",
+    "    hashCounter = 0\n",
+    "    temp        = []\n",
+    "    contactList = [] # list with interaction parameters for each element at each timestep\n",
+    "\n",
+    "    fileLines = interactionFile.readlines()[27:] # skipping the comment lines\n",
+    "    for line in fileLines:\n",
+    "        if not line.split()[0] == '#':\n",
+    "            lineList = [float(value) for value in line.split()]\n",
+    "            temp.append(lineList)\n",
+    "        else:\n",
+    "            hashCounter += 1 # checking if counter reaches 7 (7 lines of comments after every timestep data)\n",
+    "            if hashCounter == 7: \n",
+    "                contactList.append(np.array(temp))\n",
+    "                temp        = []\n",
+    "                hashCounter = 0\n",
+    "    interactionFile.close()\n",
+    "    return contactList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d9d9bd64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intPath = open('/Volumes/rahul_2TB/high_bidispersity/new_data/NP_1000/phi_0.78/ar_4.0/Vr_0.25/run_1/int_random_seed_params_stress100r_shear.dat')\n",
+    "intList = interactionsList(intPath)\n",
+    "\n",
+    "frameList = intList[200]\n",
+    "\n",
+    "normxij   = frameList[:,2]\n",
+    "normzij   = frameList[:,4]\n",
+    "lubNorm   = frameList[:,6]\n",
+    "lubTangx  = frameList[:,7]\n",
+    "lubTangz  = frameList[:,9]\n",
+    "contNorm  = frameList[:,11]\n",
+    "contTangx = frameList[:,12]\n",
+    "contTangz = frameList[:,14]\n",
+    "repulNorm = frameList[:,16]\n",
+    "\n",
+    "normInts  = lubNorm + contNorm + repulNorm\n",
+    "tangInts  = np.linalg.norm(np.array([lubTangx + contTangx, lubTangz + contTangz]), axis=0)\n",
+    "totForce  = np.array([normInts, tangInts])\n",
+    "forceNorm = np.einsum('ij,ij->i', totForce.T, np.column_stack((normxij, normzij)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "082fa875",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.einsum('ij,ij->i', normInts, normInts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1325b509",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "forceProj1 = normInts[:, np.newaxis] * np.column_stack((normxij, normzij))\n",
+    "forceProj2 = np.array([lubTangx + contTangx, lubTangz + contTangz])\n",
+    "\n",
+    "anglee = np.einsum('ij,ij->i', forceProj1, forceProj2.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8a279cf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forceProj1 = normInts[:, np.newaxis] * np.column_stack((normxij, normzij))\n",
+    "forceProj2 = np.array([lubTangx + contTangx, lubTangz + contTangz])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "158dab43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.2312251471049115e-05"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(anglee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6922b646",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-5.45533786e-06,  3.98897923e-03,  0.00000000e+00, ...,\n",
+       "       -1.08081242e-09,  1.88241246e-07, -7.71688390e-09])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anglee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c41fd2b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.01036009 -0.00971695 -0.00848037 ...  0.01535424  0.02599462\n",
+      "  0.04123355]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sort(anglee)[10:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d6ae1248",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5.4553378608749755e-06"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anglee[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "12849e56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "totForce shape: (2, 2207)\n",
+      "normxij shape: (2207,)\n",
+      "normzij shape: (2207,)\n",
+      "tang shape: (2207,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"totForce shape:\", totForce.shape)  # Should be (2438, 2)\n",
+    "print(\"normxij shape:\", normxij.shape)    # Should be (2438,)\n",
+    "print(\"normzij shape:\", normzij.shape)    # Should be (2438,)\n",
+    "print(\"tang shape:\", tangInts.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1d8ac91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
