--- a/Rough.ipynb
+++ b/Rough.ipynb
@@ -16,6 +16,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "7d9ca621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import matplotlib\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import colorsys\n",
+    "from matplotlib import colors\n",
+    "\n",
+    "matplotlib.use('TkAgg')\n",
+    "\n",
+    "topDir = '/Volumes/rahul_2TB/high_bidispersity/new_data/'\n",
+    "fig_save_path = '/Users/rahul/City College Dropbox/Rahul Pandare/CUNY/research/bidisperse_project/conferences/GSOE_poster/'\n",
+    "\n",
+    "# Path errors.\n",
+    "if not os.path.exists(topDir):\n",
+    "    print(f\"Error: Path '{topDir}' not found. Check mount point\")\n",
+    "\n",
+    "if not os.path.exists(fig_save_path):\n",
+    "    print(f\"Error: Path '{fig_save_path}' not found. Check mount point\")\n",
+    "\n",
+    "npp = 1000\n",
+    "phi = [0.77]\n",
+    "ar = [1.0, 1.4, 2.0, 4.0]\n",
+    "vr = '0.5'\n",
+    "numRun = 1\n",
+    "parFile = 'par_random_seed_params_stress100r_shear.dat'\n",
+    "\n",
+    "# Setup colormap\n",
+    "cmap = matplotlib.colormaps['gist_rainbow']\n",
+    "alpha = 0.75\n",
+    "hls = np.array([colorsys.rgb_to_hls(*c) for c in cmap(np.arange(cmap.N))[:, :3]])\n",
+    "hls[:, 1] *= alpha\n",
+    "rgb = np.clip(np.array([colorsys.hls_to_rgb(*c) for c in hls]), 0, 1)\n",
+    "cmap = colors.LinearSegmentedColormap.from_list(\"\", rgb)\n",
+    "\n",
+    "def readParFile(particleFile):\n",
+    "    particleFile.seek(0)\n",
+    "    hashCounter = 0\n",
+    "    temp = []\n",
+    "    particlesList = []\n",
+    "\n",
+    "    fileLines = particleFile.readlines()[22:]  # skipping the comment lines\n",
+    "\n",
+    "    for line in fileLines:\n",
+    "        if not line.split()[0] == '#':\n",
+    "            lineList = [float(value) for value in line.split()]\n",
+    "            temp.append(lineList)\n",
+    "        else:\n",
+    "            hashCounter += 1\n",
+    "            if hashCounter == 7:\n",
+    "                particlesList.append(np.array(temp))\n",
+    "                temp = []\n",
+    "                hashCounter = 0\n",
+    "    particleFile.close()\n",
+    "    return particlesList\n",
+    "\n",
+    "# Simulation frame to display\n",
+    "frame = 300\n",
+    "\n",
+    "for j in range(len(phi)):\n",
+    "    phii = phi[j]\n",
+    "    phii = '{:.3f}'.format(phii) if len(str(phii).split('.')[1]) > 2 else '{:.2f}'.format(phii)\n",
+    "    for k in range(len(ar)):\n",
+    "        vrr = '0.25' if ar[k] == 1.0 else '0.5'\n",
+    "        dataname = f\"{topDir}NP_{npp}/phi_{phii}/ar_{ar[k]}/Vr_{vrr}\"\n",
+    "        if os.path.exists(dataname):\n",
+    "            with open(f'{dataname}/run_{numRun}/{parFile}', 'r') as particleFile:\n",
+    "                lines = particleFile.readlines()\n",
+    "                particlesList = readParFile(particleFile)\n",
+    "\n",
+    "            # Box dimensions.\n",
+    "            Lx = float(lines[3].split()[2])\n",
+    "            Lz = float(lines[3].split()[2])\n",
+    "\n",
+    "            # Particle sizes and radii.\n",
+    "            px = particlesList[frame][:, 2]\n",
+    "            pz = particlesList[frame][:, 3]\n",
+    "            pr = particlesList[frame][:, 1]\n",
+    "\n",
+    "            # Setting up axis and box walls.\n",
+    "            fig, ax = plt.subplots(figsize=(8, 8))  # Create figure and axes\n",
+    "            newLx = Lx + 2 * np.max(pr)\n",
+    "            newLz = Lz + 2 * np.max(pr)\n",
+    "\n",
+    "            for i in range(len(particlesList[frame])):\n",
+    "                if pr[i] == 1:\n",
+    "                    circle = plt.Circle((px[i], pz[i]), pr[i], facecolor='#323232', fill=True, edgecolor='None')\n",
+    "                else:\n",
+    "                    circle = plt.Circle((px[i], pz[i]), pr[i], facecolor='#ADD8E6', fill=True, edgecolor='None')\n",
+    "                ax.add_artist(circle)\n",
+    "\n",
+    "            ax.set_xlim([-(newLx / 2 + 0.2), (newLx / 2 + 0.2)])\n",
+    "            ax.set_ylim([-(newLz / 2 + 0.2), (newLz / 2 + 0.2)])\n",
+    "            ax.axis('off')\n",
+    "            ax.set_aspect('equal')\n",
+    "\n",
+    "            # Saving figure with transparent background.\n",
+    "            figFormat = \".png\"\n",
+    "            plt.savefig(f\"{fig_save_path}snapshot_phi_{phii}_ar_{ar[k]}_vr_{vr}{figFormat}\", bbox_inches=\"tight\", dpi=800, transparent=True)\n",
+    "\n",
+    "            plt.close(fig)  # Close the figure to free up memory\n",
+    "        else:\n",
+    "            print(f\"{dataname} - Not Found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4f6bba0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 51,
    "id": "37bf0705",
    "metadata": {},
